@@ -1,5 +1,11 @@
 2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>
 
+	Same changes for chgpasswd:
+	* src/chpasswd.c: main() split in process_flags(), check_flags(),
+	check_perms(), open_files(), and close_files().
+
+2007-12-28  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/chpasswd.c: Before pam_end(), the return value of the previous
 	pam API was already checked. No need to validate it again.
 	* src/chpasswd.c: New functions: process_flags(), check_flags(),
